# lunar

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
source/core/: CMakeLists.txt  core.hpp  interconnect.hpp  register.hpp  register_new.hpp  scheduler.cpp  scheduler.hpp
source/core/arm/: arm.cpp  arm.hpp  coprocessor.hpp  cp15.cpp  cp15.hpp  cpu_core.hpp  decoder.hpp  memory.hpp  state.hpp
source/core/arm/handlers/: arithmetic.inl  handler16.inl  handler32.inl  memory.inl
source/core/arm/interpreter/: arm.hpp  cp15.cpp  cp15.hpp  interpreter.cpp  interpreter.hpp  state.hpp
source/core/arm/interpreter/handlers/: arithmetic.inl  handler32.inl
source/core/arm/interpreter/tablegen/: gen_arm.hpp  gen_thumb.hpp  tablegen.cpp
source/core/arm/tablegen/: decoder.hpp  gen_arm.hpp  gen_thumb.hpp  tablegen.cpp
source/core/arm7/: bus.cpp  bus.hpp  bus_mmio.cpp
source/core/arm9/: arm9.hpp  bus.cpp  bus.hpp  bus_mmio.cpp  cp15.cpp  cp15.hpp
source/core/hw/apu/: apu.cpp  apu.hpp
source/core/hw/cart/: backup.hpp  cart.cpp  cart.hpp
source/core/hw/dma/: dma.cpp  dma.hpp  dma7.cpp  dma7.hpp  dma9.cpp  dma9.hpp
source/core/hw/ipc/: ipc.cpp  ipc.hpp
source/core/hw/irq/: irq.cpp  irq.hpp
source/core/hw/math/: math_engine.cpp  math_engine.hpp
source/core/hw/spi/: spi.cpp  spi.hpp  spi_device.hpp
source/core/hw/spi/firmware/: firmware.cpp  firmware.hpp
source/core/hw/spi/tsc/: tsc.cpp  tsc.hpp
source/core/hw/timer/: timer.cpp  timer.hpp
source/core/hw/video_unit/: registers.inc  video_unit.cpp  video_unit.hpp  vram.cpp  vram.hpp  vram_region.hpp
source/core/hw/video_unit/gpu/: commands.cpp  gpu.cpp  gpu.hpp  matrix.hpp  matrix_stack.hpp  renderer_base.hpp
source/core/hw/video_unit/ppu/: composer.cpp  ppu.cpp  ppu.hpp  registers.cpp  registers.hpp
src/: CMakeLists.txt  buildconfig.hpp
src/common/: CMakeLists.txt  bit.hpp  log.cpp  log.hpp  math.hpp
src/core/: CMakeLists.txt  interconnect.hpp  scheduler.hpp
src/core/arm/: memory.hpp
src/core/arm/tablegen/: tablegen.cpp
src/core/arm7/: bus.hpp
src/core/arm9/: bus.hpp  cp15.hpp
src/core/hw/apu/: apu.cpp  apu.hpp
src/core/hw/cart/: backup.hpp  cart.cpp  cart.hpp
src/core/hw/dma/: dma7.cpp  dma7.hpp  dma9.cpp  dma9.hpp
src/core/hw/ipc/: ipc.hpp
src/core/hw/irq/: irq.cpp  irq.hpp
src/core/hw/math/: math_engine.cpp
src/core/hw/spi/: spi.hpp
src/core/hw/spi/firmware/: firmware.cpp  firmware.hpp
src/core/hw/spi/tsc/: tsc.hpp
src/core/hw/timer/: timer.cpp  timer.hpp
src/core/hw/video_unit/: video_unit.hpp  vram_region.hpp
src/core/hw/video_unit/gpu/: gpu.cpp  gpu.hpp  renderer_base.hpp
src/core/hw/video_unit/ppu/: ppu.cpp  ppu.hpp  registers.hpp
src/core/include/core/: core.hpp
src/core/include/core/device/: audio_device.hpp  input_device.hpp  video_device.hpp
src/core/src/: core.hpp  core_impl.cpp  exmemcnt.hpp  interconnect.hpp  scheduler.cpp  scheduler.hpp
src/core/src/arm/: arm.cpp  arm.hpp  coprocessor.hpp  memory.hpp  state.hpp
src/core/src/arm/handlers/: arithmetic.inl  handler16.inl  handler32.inl  memory.inl
src/core/src/arm/tablegen/: decoder.hpp  gen_arm.hpp  gen_thumb.hpp  tablegen.cpp
src/core/src/arm7/: arm7.cpp  arm7.hpp  bus.cpp  bus.hpp  bus_mmio.cpp
src/core/src/arm9/: arm9.cpp  arm9.hpp  bus.cpp  bus.hpp  bus_mmio.cpp  cp15.cpp  cp15.hpp
src/core/src/hw/apu/: apu.cpp  apu.hpp
src/core/src/hw/cart/: backup.hpp  cart.cpp  cart.hpp
src/core/src/hw/dma/: dma7.cpp  dma7.hpp  dma9.cpp  dma9.hpp
src/core/src/hw/ipc/: ipc.cpp  ipc.hpp
src/core/src/hw/irq/: irq.cpp  irq.hpp
src/core/src/hw/math/: math_engine.cpp  math_engine.hpp
src/core/src/hw/rtc/: rtc.cpp  rtc.hpp
src/core/src/hw/spi/: spi.cpp  spi.hpp  spi_device.hpp
src/core/src/hw/timer/: timer.cpp  timer.hpp
src/core/src/hw/video_unit/: video_unit.cpp  video_unit.hpp  vram.cpp  vram.hpp  vram_region.hpp
src/core/src/hw/wifi/: wifi.cpp  wifi.hpp
src/duality/: CMakeLists.txt
src/duality-qt/: CMakeLists.txt
src/duality-qt/src/: audio_device.cpp  audio_device.hpp  main.cpp  main_window.cpp  main_window.hpp  screen.cpp  screen.hpp
src/duality-sdl/: CMakeLists.txt
src/duality-sdl/src/: emulator_thread.cpp  emulator_thread.hpp  main.cpp
src/duality-sdl/src/device/: audio_device.cpp  audio_device.hpp  video_device.cpp  video_device.hpp
src/duality/include/duality/: emulator_thread.hpp  frame_limiter.hpp
src/duality/src/: emulator_thread.cpp  frame_limiter.cpp  main.cpp
src/duality/src/device/: video_device.cpp  video_device.hpp
src/lunar/: CMakeLists.txt
src/lunar/include/aura/arm/: coprocessor.hpp  cpu.hpp  memory.hpp
src/lunar/include/lunar/: core.hpp  integer.hpp  log.hpp
src/lunar/include/lunar/device/: audio_device.hpp  input_device.hpp  video_device.hpp
src/lunar/src/: buildconfig.hpp
src/lunar/src/arm/: arm.cpp  arm.hpp  state.hpp
src/lunar/src/arm/handlers/: arithmetic.inl  handler16.inl  handler32.inl  memory.inl
src/lunar/src/arm/tablegen/: decoder.hpp  gen_arm.hpp  gen_thumb.hpp  tablegen.cpp
src/lunar/src/common/: backup_file.hpp  fifo.hpp  likely.hpp  meta.hpp  punning.hpp  scheduler.cpp  scheduler.hpp  static_vec.hpp
src/lunar/src/common/math/: matrix.hpp  numeric_traits.hpp  vector.hpp
src/lunar/src/common/ogl/: buffer_object.hpp  frame_buffer_object.hpp  program_object.hpp  shader_object.hpp  texture_2d.hpp  vertex_array_object.hpp
src/lunar/src/nds/: core.cpp  exmemcnt.cpp  exmemcnt.hpp  interconnect.hpp  swram.cpp  swram.hpp
src/lunar/src/nds/arm7/: arm7.cpp  arm7.hpp
src/lunar/src/nds/arm9/: arm9.cpp  arm9.hpp  cp15.cpp  cp15.hpp
src/lunar/src/nds/cart/: cart.cpp  cart.hpp
src/lunar/src/nds/ipc/: ipc.cpp  ipc.hpp
src/lunar/src/nds/irq/: irq.cpp  irq.hpp
src/platform/core/: CMakeLists.txt
src/platform/core/src/: emulator_thread.cpp  frame_limiter.cpp
src/platform/sdl/: CMakeLists.txt
src/platform/sdl/src/: main.cpp
src/util/: CMakeLists.txt
src/util/include/util/: backup_file.hpp  bit.hpp  framelimiter.hpp  integer.hpp  math.hpp  punning.hpp
src/util/src/: log.cpp
(+142 files in other folders)
