set(SOURCES
  arm/arm.cpp
  arm/tablegen/tablegen.cpp
  arm7/bus.cpp
  arm7/bus_mmio.cpp
  arm9/bus.cpp
  arm9/bus_mmio.cpp
  arm9/cp15.cpp
  hw/ipc/ipc.cpp
  hw/irq/irq.cpp
  hw/spi/tsc/tsc.cpp
  hw/spi/spi.cpp
  hw/video_unit/ppu/ppu.cpp
  hw/video_unit/ppu/registers.cpp
  hw/video_unit/video_unit.cpp
  hw/video_unit/vram.cpp
  core.cpp
  scheduler.cpp)

set(HEADERS
  arm/handlers/arithmetic.inl
  arm/handlers/handler16.inl
  arm/handlers/handler32.inl
  arm/handlers/memory.inl
  arm/tablegen/decoder.hpp
  arm/tablegen/gen_arm.hpp
  arm/tablegen/gen_thumb.hpp
  arm/arm.hpp
  arm/coprocessor.hpp
  arm/state.hpp
  arm/memory.hpp
  arm7/bus.hpp
  arm9/bus.hpp
  arm9/cp15.hpp
  hw/ipc/ipc.hpp
  hw/irq/irq.hpp
  hw/spi/tsc/tsc.hpp
  hw/spi/spi.hpp
  hw/spi/spi_device.hpp
  hw/video_unit/ppu/ppu.hpp
  hw/video_unit/ppu/registers.hpp
  hw/video_unit/video_unit.hpp
  hw/video_unit/vram.hpp
  hw/video_unit/vram_region.hpp
  core.hpp
  interconnect.hpp
  scheduler.hpp)

add_library(core STATIC ${SOURCES} ${HEADERS})
target_link_libraries(core common fmt)